S15P21D205-1015 [BE] feat: GMS 하이라이트 선정 API와 실패 복귀
